test/1.2/errors/T_ECONDP.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

if (true) {
    /// ERROR ECONDP
    parameter foo = 1;
}
